--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
         <nav>
             <ul>
-                <button><li><a href="../ITWD5.130 Website Development Term 3 2021/Website Development/website/index/index.html" class="active">Homepage</a></li></button>
+                <li><a href="../ITWD5.130 Website Development Term 3 2021/Website Development/website/index/index.html" class="active">Homepage</a></li>
             </ul>
         </nav>
 
